# manadj

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  ELECTRON_CONVERSION_PLAN.md  Makefile  README.md  SYNC_REFACTORING_PLAN.md  WAVEFORM_COMPARISON_AND_RECOMMENDATIONS.md  alembic.ini  config.toml  main.py  manadj_to_engine.xml  package-lock.json  pyproject.toml  waveforms
.lanes/: README.md
alembic/: env.py
backend/: __init__.py  analysis.py  analysis_backfill.py  analysis_tasks.py  beatgrid_ops.py  beatgrid_utils.py  bulk_analysis.py  config.py  crud.py  database.py  generate_waveform_png.py  grid_analysis.py  id3_utils.py  key.py  key_analysis.py  key_utils.py  logging_config.py  main.py  migrate_drop_peaks_json.py  models.py  schemas.py  sync.py  test_waveform_generation.py  waveform_data.py  waveform_tasks.py  waveform_utils.py  waveform_worker.py
desktop/: .gitignore  README.md  ensure-electron.sh  main.js  package-lock.json  package.json
enginedj/: __init__.py  base.py  connection.py  performance_blobs.py  playlist.py  playlist_reader.py  ratings.py  sync.py  tag_reader.py  types.py
examples/: basic_query.py  create_playlist_example.py  list_rekordbox_mytags.py  playlist_operations.py
frontend/: .env.example  audio-seek-test.html  eslint.config.js  index.html  package-lock.json  package.json
harness/: __init__.py  analyzer.py  build_corpus.py  corpus.py  fit.py  grid_candidates.py  grid_scoring.py  key_candidates.py  key_scoring.py  report.py  review_page.py  run_grid.py  run_key.py
rekordbox/: __init__.py  connection.py  decode_offset.py  mappings.py  models.py  perf_export.py  playlist.py  playlist_reader.py  reader.py  sync.py  tag_reader.py  tag_sync.py  xml.py
scripts/: README.md  analyze_bpm_essentia.py  analyze_bpm_multiestimate.py  backfill_analysis.py  backfill_bpm_from_grids.py  backfill_file_facts.py  backfill_provenance.py  benchmark_bpm_detection.py  compare_analysis.py  dev.py  (+16 more)
(+1049 files in other folders)
